# pyodt1

./: .gitignore  AGENTS.md  README.md  WORKPLAN_ODT_REPOS.md  pyproject.toml
.github/workflows/: docs.yml
cases/sample_channel_case/: README.md
docs/: conf.py  getting-started.md  index.md
docs/_build/html/: .buildinfo  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  getting-started.doctree  index.doctree
docs/algorithms/: acceptance-probability.md  accepted-eddy-update.md  eddy-sampling.md  legacy-fortran-mapping.md  overview.md  rng.md  triplet-map.md
docs/api/: index.md
docs/background/: odt-literature.md
docs/implementation/: fortran-comparison.md  legacy-patches.md  package-structure.md  status-matrix.md  validation-harness.md
docs/tutorials/: odt-for-cfd-readers.md
examples/: run_sample_case.py
notes/: fortran-python-comparison.md  python-reimplementation-plan.md  upstream-versions.md
scripts/: compare_advance.py  compare_bsnap_intercomparison.py  compare_iterations.py  compare_legacy_helpers.py  compare_multi_trial.py  compare_one_step.py  compare_postprocessing.py  investigate_brecord.py  investigate_bsnap_intercomparison.py
src/pyodt1/: __init__.py  acceptance.py  advance.py  config.py  eddy_sampling.py  legacy.py  rng.py  solver.py  state.py  statistics.py  triplet.py
tests/: test_advance.py  test_legacy.py  test_postprocessing.py  test_rng.py  test_sampling.py  test_sampling_compare.py  test_solver.py  test_statistics.py  test_triplet.py
(+32 files in other folders)
